index.html update

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Joomart Achekeev</h1>
-							<p>joomart.achekeev@gmail.com | (609) 721-8270 | Plainsboro, NJ<br />
-								
+							<p>joomart.achekeev@gmail.com | (609) 721-8270 | Plainsboro, NJ<br>
+							add: current interset<br>
+							add: current it skills in development
+							</p>	
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
