--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" href="favicon.ico">
-        <title>Timer Agency Template</title>
+        <title>Joma Data</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="author" content="">
@@ -113,17 +113,20 @@ Slider Section Start
                 <!-- Slider -->
                 <section class="cd-intro">
                     <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s" >
-                    <span>HI, MY NAME IS JONATHON &amp; I AM A</span><br>
+                    <span>HI, MY NAME IS JOOMART &amp; I AM A</span><br>
                     <span class="cd-words-wrapper">
-                        <b class="is-visible">DESIGNER</b>
-                        <b>DEVELOPER</b>
+                        <b class="is-visible">DATA SCIENTIST</b>
+                        <b>PROJECT MANAGER</b>
                         <b>FATHER</b>
+                        <b>HUSBAND</b>
                     </span>
                     </h1>
                     </section> <!-- cd-intro -->
                     <!-- /.slider -->
                     <h2 class="wow fadeInUp animated" data-wow-delay=".6s" >
-                        With 10 years experience, I've occupied many roles including digital design director,<br> web designer and developer. This site showcases some of my work.
+                        ADD PERSONAL STATEMENT
+                        ADD INTERESTS
+                        ADD CURRENT WORK <br> and some more
                     </h2>
                     <a class="btn-lines dark light wow fadeInUp animated btn btn-default btn-green hvr-bounce-to-right" data-wow-delay=".9s" href="https://themefisher.com/" target="_blank">Download More</a>
                 </div>
