--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ Slider Section Start
                     </section> <!-- cd-intro -->
                     <!-- /.slider -->
                     <h2 class="wow fadeInUp animated" data-wow-delay=".6s" >
-                        ADD PERSONAL STATEMENT
-                        ADD INTERESTS
+                        ADD PERSONAL STATEMENT <br>
+                        ADD INTERESTS <br>
                         ADD CURRENT WORK <br> and some more
                     </h2>
                     <a class="btn-lines dark light wow fadeInUp animated btn btn-default btn-green hvr-bounce-to-right" data-wow-delay=".9s" href="https://themefisher.com/" target="_blank">Download More</a>
@@ -148,7 +148,8 @@ About Section Start
                     ABOUT ME
                     </h2>
                     <p>
-                        Hello, I’m a UI/UX Designer &amp; Front End Developer from Victoria, Australia. I hold a master degree of Web Design from the World University.And scrambled it to make a type specimen book. It has survived not only five centuries
+                        Hello, my name is Joomart Achekeev. I am an inquisitive and result-oriented Data Scientist, with a strong background in Project Management. My approach is based on breaking down the challenge into small steps, that can easily be tackled. I enjoy working with data and unraveling all the obvious and hidden connections, correlations, and dependencies.
+                        
                     </p>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, adipisci voluptatum repudiandae, natus impedit repellat aut officia illum at assumenda iusto reiciendis placeat. Temporibus, vero.
