--- a/about.html
+++ b/about.html
@@ -44,75 +44,79 @@
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title text-center">
                                     <h2>About <span class="primary">me</span> <span class="title-bg">Name</span></h2>
-                                    <p>I am working as a professional UI/UX Designer since 2007. Worked in more than 200 live projects and also with more than 120 different clients!</p>
+                                    <p></p>
                                 </div>
                             </div>
 
                             <div class="col-xs-12 col-md-6">
                                 <div class="about-author">
                                     <figure class="author-thumb">
-                                        <img src="img/author.jpg" alt="">
+                                        <img src="img/joma2.png" alt="">
                                     </figure> <!-- /.author-bio -->
                                     <div class="author-desc">
-                                        <p><b>Date of birth:</b> 29th july, 1984</p>
-                                        <p><b>Language:</b> English, Spanish</p>
-                                        <p><b>Expert in:</b> UI/UX, Web development</p>
-                                        <p><b>Freelance:</b> Available</p>
+                                        <p><b>Date of birth:</b> 11th November, 1984</p>
+                                        <p><b>Language:</b> English, Russian</p>
+                                        <p><b>Expert in:</b> Data Science, Project Management</p>
+                                        <p><b>Current status:</b> open to job offers </p>
                                     </div>
                                     <!-- /.author-desc -->
                                 </div> <!-- /.about-author -->
-                                <p>I'm a multi-award winning designer that has been specialising in web design for the past three years although I have experience in branding and print.Projects.</p>
+                                <p>I am a Project Manager turned Data Scientist. This is the switch I have been dreaming about for a long time. It happend, I am here and ready for action.</p>
                             </div> <!-- /.col -->
-
+                            
                             <div class="col-xs-12 col-md-6">
                                 <div class="section-title clear">
                                     <h3>Skills</h3>
                                 </div>
                                 <div class="skill-wrapper">
                                     <div class="progress clear">
-                                        <div class="skill-name">Photoshop</div>
+                                        <div class="skill-name">Python</div>
                                         <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
                                         <div class="skill-lavel" data-skill-value="90%"></div>
                                     </div> <!-- /.progress -->
                                     <div class="progress clear">
-                                        <div class="skill-name">Illustrator</div>
+                                        <div class="skill-name">SQL</div>
                                         <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="78%"></div>
+                                        <div class="skill-lavel" data-skill-value="80%"></div>
                                     </div> <!-- /.progress -->
                                     <div class="progress clear">
-                                        <div class="skill-name">After Fffects</div>
+                                        <div class="skill-name">Cloud Computing</div>
                                         <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="85%"></div>
+                                        <div class="skill-lavel" data-skill-value="35%"></div>
                                     </div> <!-- /.progress -->
                                     <div class="progress clear">
-                                        <div class="skill-name">HTML5</div>
+                                        <div class="skill-name">Tableau</div>
                                         <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="95%"></div>
-                                    </div> <!-- /.progress -->
-                                    <div class="progress clear">
-                                        <div class="skill-name">WordPress</div>
-                                        <div class="skill-bar">
-                                            <div class="bar"></div>
-                                        </div>
-                                        <div class="skill-lavel" data-skill-value="70%"></div>
-                                    </div> <!-- /.progress -->
-                                    <div class="progress clear">
-                                        <div class="skill-name">jQuery</div>
-                                        <div class="skill-bar">
-                                            <div class="bar"></div>
-                                        </div>
-                                        <div class="skill-lavel" data-skill-value="75%"></div>
+                                        <div class="skill-lavel" data-skill-value="25%"></div>
                                     </div> <!-- /.progress -->
                                 </div> <!-- /.skill-wrapper -->
                             </div> <!-- /.col -->
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
+                                    <ul class="contact-social">
+                                        <li>
+                                            <span class="contact-social-hex"></span>
+                                            <a href="www.linkedin.com/"><i class="tf-ion-social-linkedin"></i></a>
+                                        </li>
+                                        <li>
+                                            <span class="contact-social-hex"></span>
+                                            <a href="www.dribbble.com/themefisher"><i class="tf-ion-social-github"></i></a>
+                                        </li>
+                                        <li>
+                                            <span class="contact-social-hex"></span>
+                                            <a href="mailto: joomart.achekeev@gmail.com"><i class="tf-ion-social-google"></i></a>
+                                        </li>
+
+                                    </ul>
+                                </div>
                         </div> <!-- /.row -->
                     </div> <!-- /.container -->
 
