--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,7 @@
         <!-- meta charset -->
         <meta charset="utf-8">
         <!-- site title -->
-        <title>Phantom | Personal Resume Template</title>
+        <title>JomaData| About</title>
         <!-- meta description -->
         <meta name="description" content="">
         <!-- mobile viwport meta -->
@@ -33,23 +33,6 @@
             <div class="loading-mask"></div>
         </div>
 
-        <div class="preview-wrapper">
-            <div class="switcher-head">
-                <span>Style Switcher</span>
-                <div class="switcher-trigger tf-tools"></div>
-            </div>
-
-            <div class="switcher-body">
-                <h4>Choose Color:</h4>
-                <ul class="color-options list-none">
-                    <li class="c0" data-color="red" title="Default">Default</li>
-                    <li class="c1" data-color="blue" title="Red">Red</li>
-                    <li class="c2" data-color="green" title="Green">Green</li>
-                    <li class="c3" data-color="yellow" title="Blue">Blue</li>
-                </ul>
-            </div>
-        </div>
-
         <main class="site-wrapper">
             <div class="pt-table">
                 <div class="pt-tablecell page-welcome relative">
@@ -66,8 +49,8 @@
                             <div class="col-xs-12 col-md-6 col-lg-7">
                                 <div class="page-title">
                                     <h2>Joomart <span class="primary">Achekeev</span> <span class="title-bg">About</span></h2>
-                                    <p>A product designer from England, who focuses on interactive design & A freelance designer focusing on typography & clean interfaces. Also works in Google..</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores repellendus corporis, tenetur inventore perferendis reprehenderit autem dignissimos non quos unde eveniet sapiente necessitatibus consequuntur ea ab dolore, minus nam eaque.</p>
+                                    <p>A Data Scientist, Project Manager, Husband and Father.</p>
+                                    <p></p>
                                 </div>
                             </div>
                         </div> <!-- /.row -->
