--- a/about.html
+++ b/about.html
@@ -104,17 +104,16 @@
                                     <ul class="contact-social">
                                         <li>
                                             <span class="contact-social-hex"></span>
-                                            <a href="www.linkedin.com/"><i class="tf-ion-social-linkedin"></i></a>
+                                            <a href="www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="tf-ion-social-linkedin"></i></a>
                                         </li>
                                         <li>
                                             <span class="contact-social-hex"></span>
-                                            <a href="www.dribbble.com/themefisher"><i class="tf-ion-social-github"></i></a>
+                                            <a href="www.github.com/jomadata" target="_blank" rel="noopener noreferrer"><i class="tf-ion-social-github"></i></a>
                                         </li>
                                         <li>
                                             <span class="contact-social-hex"></span>
-                                            <a href="mailto: joomart.achekeev@gmail.com"><i class="tf-ion-social-google"></i></a>
+                                            <a href="mailto: joomart.achekeev@gmail.com" target="_blank" rel="noopener noreferrer"><i class="tf-ion-social-google"></i></a>
                                         </li>
-
                                     </ul>
                                 </div>
                         </div> <!-- /.row -->
@@ -124,7 +123,26 @@
                         <div class="container">
                             <div class="flex flex-middle space-between">
                                 <span class="prev-page"><a href="welcome.html" class="link">&larr; Prev Page</a></span>
-                                <span class="copyright hidden-xs">Copyright &copy; 2016 Phantom, All Rights Reserved.</span>
+                                <span class="copyright hidden-xs">                            
+                                    <div class="row">
+                                        <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
+                                            <ul class="contact-social">
+                                                <li>
+                                                    <span class="contact-social-hex"></span>
+                                                    <a href="www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="tf-ion-social-linkedin"></i></a>
+                                                </li>
+                                                <li>
+                                                    <span class="contact-social-hex"></span>
+                                                    <a href="www.github.com/jomadata" target="_blank" rel="noopener noreferrer"><i class="tf-ion-social-github"></i></a>
+                                                </li>
+                                                <li>
+                                                    <span class="contact-social-hex"></span>
+                                                    <a href="mailto: joomart.achekeev@gmail.com" target="_blank" rel="noopener noreferrer"><i class="tf-ion-social-google"></i></a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div> <!-- /.row -->
+                                </span>
                                 <span class="next-page"><a href="services.html" class="link">Next Page &rarr;</a></span>
                             </div>
                         </div>
