--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title text-center">
-                                    <h2>About <span class="primary">me</span> <span class="title-bg">Name</span></h2>
+                                    <h2>Joomart<span class="primary">Achekeev</span> <span class="title-bg">ABOUT</span></h2>
                                     <p></p>
                                 </div>
                             </div>
@@ -104,11 +104,11 @@
                                     <ul class="contact-social">
                                         <li>
                                             <span class="contact-social-hex"></span>
-                                            <a href="www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="tf-ion-social-linkedin"></i></a>
+                                            <a href="https://www.linkedin.com/in/joomart-achekeev/" target="_blank" rel="noopener noreferrer"><i class="tf-ion-social-linkedin"></i></a>
                                         </li>
                                         <li>
                                             <span class="contact-social-hex"></span>
-                                            <a href="www.github.com/jomadata" target="_blank" rel="noopener noreferrer"><i class="tf-ion-social-github"></i></a>
+                                            <a href="https://www.github.com/jomadata" target="_blank" rel="noopener noreferrer"><i class="tf-ion-social-github"></i></a>
                                         </li>
                                         <li>
                                             <span class="contact-social-hex"></span>
