--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
         <!-- meta charset -->
         <meta charset="utf-8">
         <!-- site title -->
-        <title>Phantom | Personal Resume Template</title>
+        <title>JomaData | Resume</title>
         <!-- meta description -->
         <meta name="description" content="">
         <!-- mobile viwport meta -->
@@ -62,12 +62,97 @@
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title text-center">
                                     <h2>My <span class="primary">history</span> <span class="title-bg">Resume</span></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                                    <p></p>
                                 </div>
                             </div>
                         </div> <!-- /.row -->
 
                         <div class="row">
+                            <div class="col-xs-12 col-sm-6">
+                                <div class="history-block">
+                                    <div class="section-title light clear">
+                                        <h3>Experience</h3>
+                                    </div>
+                                    <!-- /.section-title -->
+                                    <div class="history-scroller">
+                                        <div class="history-item">
+                                            <div class="history-icon">
+                                                <span class="history-hex"></span>
+                                                <i class="tf-documents5"></i>
+                                            </div>
+                                            <div class="history-text">
+                                                <h5>Data Science Immersive <br> General Assembly</h5>
+                                                <span>Oct 2021 - Jan 2022</span>
+                                                <p>3 individual and 2 team projects in data science and machine learning <br>
+                                                    o	Linear Regression Modeling (Ames housing dataset)<br>
+                                                    o	Web Scrapping and NLP classification (Reddit scrapped data)<br>
+                                                    o	Hackathon with Decision Trees (Population Data)<br>
+                                                    o	Stacking with linear regression and neural network <br>(Unemployment related data, collected from various official sources)<br>
+                                                    o	NLP extraction of additional review dimensions (yelp academic dataset)<br>
+                                                    100% completion of all the requirements
+                                                    </p>
+                                            </div>
+                                        </div>
+                                        <!-- /.history-item -->
+                                        <div class="history-item">
+                                            <div class="history-icon">
+                                                <span class="history-hex"></span>
+                                                <i class="tf-documents5"></i>
+                                            </div>
+                                            <div class="history-text">
+                                                <h5>Back-end Webdevelopment in Python <br> Makers Coding Bootcamp (incomplete)</h5>
+                                                <span>Apr-Jul 2021</span>
+                                                <p>•	Among top 3 performers at each checkpoint <br>
+                                                    •	Projects:<br>
+                                                    o	Web scraping data<br>
+                                                    o	Setting up a small relational database with certain parameters<br>
+                                                    o	Building a backend of a website in Django (unfinished)<br>
+                                                    </p>
+                                            </div>
+                                        </div>
+                                        <!-- /.history-item -->
+                                        <div class="history-item">
+                                            <div class="history-icon">
+                                                <span class="history-hex"></span>
+                                                <i class="tf-documents5"></i>
+                                            </div>
+                                            <div class="history-text">
+                                                <h5>Program Coordinator <br> Soros Foundation Kyrgyzstan </h5>
+                                                <span>Oct 2019 - Apr 2021</span>
+                                                <p>• Management of 135,000 USD/year program <br>
+                                                    •	Organization of 10+ in city and out of city events with up to 15+ participants each<br>
+                                                    </p>
+                                            </div>
+                                        </div>
+                                        <!-- /.history-item -->
+                                        <div class="history-item">
+                                            <div class="history-icon">
+                                                <span class="history-hex"></span>
+                                                <i class="tf-documents5"></i>
+                                            </div>
+                                            <div class="history-text">
+                                                <h5>Senior Programme Assistant (Acting Project Manager) <br> OSCE Programme Office in Bishkek</h5>
+                                                <span>Apr 2015 - Sep 2018</span>
+                                                <p>•	Management of 180,000 EURO/year project <br>
+                                                    •	Organization of 1 large scale event involving up to 500 people, 5 middle level events involving up to 50 people, and numerous small-scale events, involving 3-10 people
+                                                    </p>
+                                            </div>
+                                        </div>
+                                        <!-- /.history-item -->
+                                        <div class="history-item">
+                                            <div class="history-icon">
+                                                <span class="history-hex"></span>
+                                                <i class="tf-documents5"></i>
+                                            </div>
+                                            <div class="history-text">
+                                                <h5>Other non-relevant experience available</h5>
+                                                <span>please see <a href='https://www.linkedin.com/in/joomart-achekeev/' target="_blank" rel="noopener noreferrer">LinkedIn</a> profile for more information</span>
+                                            </div>
+                                        </div>
+                                        <!-- /.history-item -->
+                                    </div>
+                                </div> <!-- /.history-block -->
+                            </div> <!-- /.col -->
                             <div class="col-xs-12 col-sm-6">
                                 <div class="history-block">
                                     <div class="section-title light clear">
@@ -81,8 +166,9 @@
                                                 <i class="tf-documents5"></i>
                                             </div>
                                             <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
+                                                <h5>General Assembly</h5>
+                                                <span>Data Science Immersive (Certification)</span> <br>
+                                                <span>2022</span>
                                             </div>
                                         </div>
                                         <!-- /.history-item -->
@@ -92,9 +178,9 @@
                                                 <i class="tf-documents5"></i>
                                             </div>
                                             <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                                <p>Claritas est etiam processus dynamicus, qui <br> sequitur mutationem consuetudium lectorum.</p>
+                                                <h5>Makers Coding Bootcamp</h5>
+                                                <span>Backend Web Development Bootcamp (Incomplete Certification)</span><br>
+                                                <span>2021</span>
                                             </div>
                                         </div>
                                         <!-- /.history-item -->
@@ -104,8 +190,9 @@
                                                 <i class="tf-documents5"></i>
                                             </div>
                                             <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
+                                                <h5>OSCE Academy</h5>
+                                                <span>Master of Arts of Economics (Economic Governance and Development)</span><br>
+                                                <span>2014</span>
                                             </div>
                                         </div>
                                         <!-- /.history-item -->
@@ -115,88 +202,11 @@
                                                 <i class="tf-documents5"></i>
                                             </div>
                                             <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
+                                                <h5>American University in Central Asia</h5>
+                                                <span>Bachelor of Business Administration (Marketing and Management)</span><br>
+                                                <span>2008</span>
                                             </div>
                                         </div>
-                                        <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
-                                    </div>
-                                </div> <!-- /.history-block -->
-                            </div> <!-- /.col -->
-                            <div class="col-xs-12 col-sm-6">
-                                <div class="history-block">
-                                    <div class="section-title light clear">
-                                        <h3>Experiences</h3>
-                                    </div>
-                                    <!-- /.section-title -->
-                                    <div class="history-scroller">
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                                <p>Claritas est etiam processus dynamicus, qui <br> sequitur mutationem consuetudium lectorum.</p>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
                                     </div>
                                 </div> <!-- /.history-block -->
                             </div> <!-- /.col -->
