--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <main class="site-wrapper">
             <div class="pt-table">
-                <div class="pt-tablecell page-home relative" style="background-image: url('img/banner.jpg');">
+                <div class="pt-tablecell page-home relative" style="background-image: url('img/background.png');">
                     <div class="overlay"></div>
 
                     <div class="container">
