--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Joomart Achekeev</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/joma.png" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/joma2.png" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Certifications</a></li>
                 </ul>
             </div>
@@ -56,6 +56,48 @@
                 </div>
             </section>
             <hr class="m-0" />
+
+            <hr class="m-0" />
+            <!-- Interests-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Projects</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0"><a href="https://github.com/jomadata/capstone"  target="_blank" rel="noopener noreferrer">Yelp reviews data extraction</a></h3>
+                            <div class="subheading mb-3">‘Sentiment’ analysis on the basis of keywords to extract information on restaurant review dimensions (food quality, service quality, service speed and overall atmosphere) and BERT modelling for extraction of generalized single text review</div>
+                            <div></div>
+                            <p></p>
+                        </div>
+                        </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0"><a href="https://github.com/jomadata?tab=repositories"  target="_blank" rel="noopener noreferrer">Unemployment factors</a></h3>
+                            <div class="subheading mb-3">Stacking model with Neural network and linear regression on data collected from official sources (Census, USDA, FBI)</div>
+                            <div></div>
+                            <p>92.1% explainability</p>
+                        </div>
+                        
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0"><a href="https://github.com/jomadata/ames_housing"  target="_blank" rel="noopener noreferrer">Ames Housing price prediction</a></h3>
+                            <div class="subheading mb-3">Linear regression model built on preprocessed and feature engineered data from Ames (Iowa) housing buy and sell transactions.</div>
+                            <div></div>
+                            <p>89.43% explainability</p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0"><a href="https://github.com/jomadata/reddit_classification"  target="_blank" rel="noopener noreferrer">Reddit classification by topic</a></h3>
+                            <div class="subheading mb-3">Classification of reddit post via NLP based on the initial scrape of 78 subreddits with 2000 posts deep each</div>
+                            <div></div>
+                            <p>62.3% accuracy</p>
+                        </div>
+                        </div>
+                </div>
+            </section>
+
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
@@ -257,46 +299,7 @@
                     </ul> -->
                 </div>
             </section>
-            <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Projects</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"><a href="https://github.com/jomadata/capstone"  target="_blank" rel="noopener noreferrer">Yelp reviews data extraction</a></h3>
-                            <div class="subheading mb-3">‘Sentiment’ analysis on the basis of keywords to extract information on restaurant review dimensions (food quality, service quality, service speed and overall atmosphere) and BERT modelling for extraction of generalized single text review</div>
-                            <div></div>
-                            <p></p>
-                        </div>
-                        </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"><a href="https://github.com/jomadata?tab=repositories"  target="_blank" rel="noopener noreferrer">Unemployment factors</a></h3>
-                            <div class="subheading mb-3">Stacking model with Neural network and linear regression on data collected from official sources (Census, USDA, FBI)</div>
-                            <div></div>
-                            <p>92.1% explainability</p>
-                        </div>
-                        
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"><a href="https://github.com/jomadata/ames_housing"  target="_blank" rel="noopener noreferrer">Ames Housing price prediction</a></h3>
-                            <div class="subheading mb-3">Linear regression model built on preprocessed and feature engineered data from Ames (Iowa) housing buy and sell transactions.</div>
-                            <div></div>
-                            <p>89.43% explainability</p>
-                        </div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"><a href="https://github.com/jomadata/reddit_classification"  target="_blank" rel="noopener noreferrer">Reddit classification by topic</a></h3>
-                            <div class="subheading mb-3">Classification of reddit post via NLP based on the initial scrape of 78 subreddits with 2000 posts deep each</div>
-                            <div></div>
-                            <p>62.3% accuracy</p>
-                        </div>
-                        </div>
-                </div>
-            </section>
+
             <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
