--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/joomart-achekeev/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/jomadata" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://github.com/jomadata/jomadata.github.io/raw/main/joomart_achekeev_resume_01.20.22.pdf" target="_blank" rel="noopener noreferrer"><i class="far fa-address-card"></i></a>
+                        <a class="social-icon" href="https://github.com/jomadata/jomadata.github.io/raw/main/joomart_achekeev_resume.pdf" target="_blank" rel="noopener noreferrer"><i class="far fa-address-card"></i></a>
                     </div>
                 </div>
             </section>
