--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Joomart Achekeev</h1>
-      <p>I'm a <span class="typed" data-typed-items="Data Scientist, Project Manager, Husband, Father, Dreamer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Data Scientist, Data Scientist, Data Scientist"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/joomart-achekeev/" target="_blank" rel="noopener noreferrer" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/jomadata?tab=repositories" target="_blank" rel="noopener noreferrer" class="github"><i class="bx bxl-github"></i></a>
