--- a/index.html
+++ b/index.html
@@ -392,29 +392,19 @@
               
               <div class="col-lg-6">
                 <div class="resume-item">
-                  <h4>Program Coordinator</h4>
-                  <h5>Soros Foundation - Kyrgyzstan, Bishkek, Kyrgyzstan</h5>
-                  <p><em>Oct 2019 - Apr 2021 </em></p>
+                  <h4>Data Manager</h4>
+                  <h5>School of Data - Kyrgyzstan, Bsihkek, Kyrgyzstan</h5>
+                  <p><em>Sep 2018 - Oct 2019 </em></p>
                   <ul>
                     <li>
-                        Managed 135,000 USD/year program
+                        Main point of data on all the projects implemented in the organization
                     </li>
                     <li>
-                        Organized 10+ in city and out of city events with up to 15+ participants each per year
-                    </li>
-                </ul>
-                </div>
-                <div class="resume-item">
-                  <h4>Senior Programme Assistant (Acting Project Manager)</h4>
-                  <h5>OSCE Programme Office in Bishkek, Bishkek, Kyrgyzstan</h5>
-                  <p><em>May 2015 - Sep 2018 </em></p>
-                  <ul>
-                    <li>
-                        Managed 180,000 EURO/year project 
+                        Responsible for data mining, data cleaning, data processing, and data access for team members
                     </li>
                     <li>
-                        Organized 1 large scale event involving up to 500 people, 5 middle level events involving up to 50 people, and numerous small-scale events, involving 3-10 people per year
-                    </li>
+                        Managing data on various topics from pastureland size to government purchases history
+                  </li>
                 </ul>
                 </div>
     
