--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <img src="assets/img/profile.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Data Scientist &amp; Project Manager.</h3>
+            <h3>Data Scientist, Backend Developer &amp; Project Manager.</h3>
             <p class="fst-italic">
               
             </p>
