--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Jomadata | Portfolio</title>
+  <title>JohnAchek | Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -59,8 +59,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Joomart Achekeev</h1>
-      <p>I'm a <span class="typed" data-typed-items="Data Analyst/Scientist, Backend developer, Project Manager"></span></p>
+      <h1>John Achek</h1>
+      <p>I'm a <span class="typed" data-typed-items="Data Analyst, Data Scientist, Backend developer, Project Manager"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/joomart-achekeev/" target="_blank" rel="noopener noreferrer" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/jomadata?tab=repositories" target="_blank" rel="noopener noreferrer" class="github"><i class="bx bxl-github"></i></a>
@@ -93,7 +93,7 @@
               <div class="col-lg-6">
                 <ul>
                   
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>joomart.achekeev@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>john.achek@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>609 455 3245</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>New Jersey, USA</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master's Degree in Economics</span></li>
