name change update
name change

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 
         <div class="section-title">
           <h2>2024 professional goals</h2>
-          <h5>Land a Junior Data Scientis or a Junior AI/ML Engineer position</h5>
+          <h5>Land a Junior Data Scientist or a Junior AI/ML Engineer position</h5>
           <h5>Work on at least 5 personal projects</h5>
           <h5>Continue developing ML knowledge and skills</h5>
           <h5>Spend quality time with family</h5>
@@ -447,8 +447,8 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Joomart Achekeev</h3>
-      <p>Member of the Dataholics Society</p>
+      <h3>John Achek</h3>
+      <p>Honorary Member of the Dataholics Society</p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/joomart-achekeev/" target="_blank" rel="noopener noreferrer" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/jomadata?tab=repositories" target="_blank" rel="noopener noreferrer" class="github"><i class="bx bxl-github"></i></a>
